# voice.man

./: .env.example  .gitignore  API_REFERENCE.md  CHANGELOG.md  COMMIT_STRATEGY.md  DEPLOYMENT_CHECKLIST.md  GPU_F0_EXTRACTION_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SESSION_STATE.md  VALIDATION_PHASE_1-4.md  VALIDATION_PHASE_10.md  VALIDATION_PHASE_11_FINAL.md  VALIDATION_PHASE_5.md  VALIDATION_PHASE_6.md  VALIDATION_PHASE_7.md  VALIDATION_PHASE_8.md  VALIDATION_PHASE_9.md  document_sync_quality_verification_report.md  find_long_audio.py  pyproject.toml  quality_verification_report_SPEC-FORENSIC-WEB-001.md
.claude/: settings.json
alembic/: env.py
config/: training_config_example.yaml
data/: crime_keywords.json
docs/: BATCH_PROCESSING_TDD_REPORT.md  CHAIN_OF_CUSTODY_GUIDE.md  CODE_COMPARISON_ANALYSIS.md  CULTURAL_CONTEXT_ANALYSIS.md  DURATION_EXTRACTION_ANALYSIS.md  EDGEXPERT_INTEGRATION_GUIDE.md  EDGEXPERT_MIGRATION_GUIDE.md  EMOTION_ANALYSIS_API.md  FORENSIC_EVIDENCE_METHODOLOGY.md  FORENSIC_PIPELINE_ARCHITECTURE.md  GPU_OPTIMIZATION_REPORT.md  INTEGRATED_PIPELINE_GUIDE.md  JETSON_PYTORCH_SETUP.md  KLUE_BERT_INTEGRATION.md  KOBERT_FINETUNING.md  KOBERT_INTEGRATION_GUIDE.md  LEGAL_COMPLIANCE_CHECKLIST.md  MEMORY_SAFE_BATCH.md  MSI_EDGEXPERT_OPTIMIZATION.md  MULTI_GPU_BATCH_PARALLEL_DESIGN.md  NLP_ARCHITECTURE.md  OPTIMIZATION_REVIEW_AND_CPU_PARALLEL.md  SERVICE_ARCHITECTURE_RESEARCH.md  SER_INFERENCE_FIX.md  acceptance.md  api-reference.md  architecture.md  deployment.md  development.md
forensic_evidence_results/: batch_001_report.json  batch_002_report.json  batch_003_report.json  batch_004_report.json  batch_005_report.json  batch_006_report.json  batch_007_report.json  batch_008_report.json  batch_009_report.json  batch_010_report.json  batch_011_report.json  batch_012_report.json  batch_013_report.json  batch_014_report.json  batch_015_report.json  batch_016_report.json  batch_017_report.json  batch_018_report.json  batch_019_report.json  forensic_evidence_complete_analysis.json
ref/: gaslighting-forensic-ai-guide.md  고소장_신기연_v2_사회적맥락포함_20250106.docx  신동식_고소장_Version_B_상세본.docx
scripts/: batch_forensic_analysis.py  batch_forensic_optimized.py  batch_forensic_parallel.py  batch_html_to_pdf.py  benchmark_cpu.py  benchmark_duration_extraction.py  benchmark_forensic_gpu_optimization.py  benchmark_gpu_audio.py  build-ctranslate2-cuda.sh  e2e_batch_test.py  e2e_pipeline_test.py  forensic_evidence_analyzer.py  forensic_monitor.py  forensic_monitoring_dashboard.py  generate_forensic_report.py  generate_forensic_validation_report.py  generate_transcription_report.py  install-cuda-deps-py312.sh  install-cuda-deps.sh  install_jetson_pytorch_correct.sh  monitor_pipeline.py  pipeline_monitor.py  process_audio_files.py  run_ci_tests.sh  run_e2e_test.py  run_forensic_analysis.sh  run_forensic_full.py  (+8 more)
(+559 files in other folders)
